--- a/week3/README.rmd
+++ b/week3/README.rmd
@@ -2,7 +2,9 @@
 title: "Reproducible Research - Week 3 Notes"
 author: "Chandrasekar Ganesan"
 date: "March 6, 2017"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
