--- a/Final Assignment/README.rmd
+++ b/Final Assignment/README.rmd
@@ -39,3 +39,103 @@ The events in the database start in the year 1950 and end in November 2011. In t
 
 #Data Analysis 
 
+## Get Data
+
+```{r cache=TRUE}
+
+tf <- tempfile()
+file_url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
+download.file(file_url, destfile = tf)
+
+stormdata <- read.csv(tf, stringsAsFactors = FALSE)
+
+```
+
+## Analyze Data
+
+```{r}
+head(stormdata)
+summary(stormdata)
+
+# Read unique type of data
+unique_eventtypes <- unique(stormdata$EVTYPE)
+
+# Read the Injuries data
+head(stormdata$INJURIES)
+summary(stormdata$INJURIES)
+head(stormdata$FATALITIES)
+summary(stormdata$FATALITIES)
+
+```
+
+## Analysis
+
+### Question 1: Which event is most harmful to population health?
+
+```{r}
+library(ggplot2)
+
+casualities <- with(stormdata, aggregate(INJURIES + FATALITIES ~ EVTYPE, data=stormdata, FUN = "sum"))
+names(casualities) <- c("EVTYPE","TotalCasualities")
+
+#sort descending
+casualities <- casualities[order(-casualities$TotalCasualities),]
+top5 <- head(casualities, 5)
+
+g <- ggplot(top5, aes(EVTYPE, TotalCasualities))
+g <- g + geom_bar(stat = "identity", aes(colour=EVTYPE, fill=EVTYPE), show.legend = FALSE)
+g <- g + scale_x_discrete(limits = top5$EVTYPE[order(-top5$TotalCasualities)])
+g <- g + ggtitle("Event causing most harm to the population health")
+g <- g + xlab("Event Type")
+g + ylab("Total Casualities")
+
+```
+
+> As it can be observed, the most harmful event is ** TORNADO **
+
+### Question 2: Which event have the greatest economic consequences? 
+
+```{r}
+# Get the subset of strom data that deals with costs
+
+stormsubset <- subset(stormdata, (stormdata$CROPDMGEXP == "M" | stormdata$CROPDMGEXP == "K" | stormdata$CROPDMGEXP == "B") | (stormdata$PROPDMGEXP =="M" | stormdata$PROPDMGEXP =="K" | stormdata$PROPDMGEXP =="B") )
+
+
+# Factor the crop damage data based on codes
+
+for(i in 1:length(stormsubset$CROPDMGEXP)) {
+                ifelse(stormsubset$CROPDMGEXP[i] == "M", stormsubset$CROPDMG[i] <- stormsubset$CROPDMG[i] * 1000000, 
+                ifelse(stormsubset$CROPDMGEXP[i] == "K", stormsubset$CROPDMG[i] <- stormsubset$CROPDMG[i] * 1000,
+                ifelse(stormsubset$CROPDMGEXP[i] == "B", stormsubset$CROPDMG[i] <- stormsubset$CROPDMG[i] * 1000000000, stormsubset$CROPDMG[i] <- stormsubset$CROPDMG[i] * 1)))
+}
+summary(stormsubset$CROPDMGEXP)
+
+# Factor the property damage data based on codes
+for(i in 1:length(stormsubset$PROPDMGEXP)) {
+                ifelse(stormsubset$PROPDMGEXP[i] == "M", stormsubset$PROPDMG[i] <- stormsubset$PROPDMG[i] * 1000000,
+                ifelse(stormsubset$PROPDMGEXP[i] == "K", stormsubset$PROPDMG[i] <- stormsubset$PROPDMG[i] * 1000,
+                ifelse(stormsubset$PROPDMGEXP[i] == "B", stormsubset$PROPDMG[i] <- stormsubset$PROPDMG[i] * 1000000000, stormsubset$PROPDMG[i] <- stormsubset$PROPDMG[i] * 1)))
+}
+summary(stormsubset$PROPDMGEXP)
+```
+
+
+
+```{r}
+library(ggplot2)
+library(scales)
+
+economic <- with(stormsubset, aggregate(CROPDMG + PROPDMG ~ EVTYPE, data=stormsubset, FUN=sum))
+names(economic) <- c("Event.Type", "Economic.Damage")
+
+top5_eco <- head(economic[order(-economic$Economic.Damage),], 5)
+g
+g <- ggplot(top5_eco, aes(Event.Type, Economic.Damage))
+g <- g + geom_bar(stat = "identity", aes(colour=Event.Type, fill=Event.Type), show.legend = FALSE)
+g <- g + scale_x_discrete(limits = top5_eco$Event.Type[order(-top5_eco$Economic.Damage)])
+g <- g + ggtitle("Event causing most economic damage")
+g <- g + xlab("Event Type")
+g + ylab("Economic Damage") + scale_y_continuous(labels = comma)
+
+```
+
